Fix text overflow in notif message on smaller screens

--- a/docs/style.css
+++ b/docs/style.css
@@ -635,7 +635,6 @@ tbody > tr:hover {
   position: fixed;
   top: 2rem;
   left: 50%;
-  height: 42px;
   --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   border-radius: 0.25rem;
@@ -646,9 +645,16 @@ tbody > tr:hover {
   padding-bottom: 0.5rem;
   padding-left: 1rem;
   padding-right: 1rem;
+  text-align: center;
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+@media (min-width: 768px) {
+  #notif {
+    height: 42px;
+  }
 }
 
 .text-input {
