--- a/src/input.css
+++ b/src/input.css
@@ -11,7 +11,7 @@ tbody > tr {
 }
 
 #notif {
-    @apply bg-white shadow border rounded fixed top-8 left-1/2 py-2 px-4 h-[42px] -translate-x-1/2;
+    @apply bg-white shadow border rounded fixed top-8 left-1/2 py-2 px-4 md:h-[42px] -translate-x-1/2 text-center;
 }
 
 .text-input {
